[tool.poetry]
name = "influxdb-logger"
version = "0.1.0"
description = ""
authors = ["Maulin Tolia <mntolia94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
influxdb-client = {extras = ["ciso"], version = "^1.21.0"}
isort = "^5.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
